--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,23 @@ body {
     padding-top: 10px;
 }
 
-/* css header */
+/* css header adn banner */
+
+.banner {
+    background-image: url("../img/bannertop.webp");
+    width: 100%;
+    background-size: cover;
+    height: 48px;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+@media (max-width: 576px) {
+    .banner {
+        background-size: contain;
+        height: 10px;
+    }
+}
 
 header {
     background-image: url("../img/background-header.webp");
@@ -376,8 +392,28 @@ header {
     color: #cd151c;
 }
 
-.header-bottom ul.header-bottom-left li.active {
-    border-bottom: 3px solid #fcaf17;
+.header-bottom ul.header-bottom-left li {
+    border-bottom: 3px solid transparent;
+}
+
+.border-hover {
+    height: 3px;
+    width: 0;
+    display: block;
+    background-color: #fcaf17;
+    transition: all linear 0.3s;
+}
+
+.header-bottom ul.header-bottom-left li:hover .border-hover {
+    width: 100%;
+}
+
+.header-bottom ul.header-bottom-left li:hover a {
+    color: #fcaf17;
+}
+
+.header-bottom ul.header-bottom-left li.active .border-hover {
+    width: 100%;
 }
 
 .header-bottom ul.header-bottom-left li.active a {
@@ -484,6 +520,110 @@ header {
 
 .title-mega-menu.active {
     color: red !important;
+}
+
+/* CSS Banner suggest */
+.banner-wp-suggest-body {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+}
+
+.banner-wp-suggest-body--item {
+    width: 20%;
+    padding: 0 10px;
+}
+
+@media (max-width: 576px) {
+    .banner-wp-suggest-body--item {
+        width: 100%;
+        margin-bottom: 6px;
+        height: 140px;
+    }
+
+    .banner-wp-suggest-body--item:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.banner-wp-suggest-body--item a {
+    display: block;
+    text-decoration: none;
+    height: 120px;
+    padding: 0 10px;
+    border-radius: 6px;
+    overflow: hidden;
+    position: relative;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.banner-wp-suggest-body--item a:hover {
+    opacity: 0.8;
+}
+
+.banner-wp-suggest-body--item .baget {
+    position: absolute;
+    background: #f96e17;
+    text-transform: uppercase;
+    color: #fff;
+    position: absolute;
+    top: -12px;
+    right: -25px;
+    padding: 20px 20px 4px;
+    transform: rotate(45deg);
+    font-size: 12px;
+    font-weight: 600;
+}
+
+/* CSS Free Ship */
+
+.free-ship-and {
+    background-color: #f4f1f1;
+    display: flex;
+    border-radius: 10px;
+    flex-wrap: wrap;
+    height: 80px;
+    align-items: center;
+    padding: 0 20px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+.free-ship-and-item {
+    display: flex;
+    width: 25%;
+    padding: 0 10px;
+}
+
+@media (max-width: 576px) {
+    .free-ship-and {
+        height: unset;
+    }
+
+    .free-ship-and-item {
+        width: 100%;
+        padding: 10px 0;
+    }
+}
+
+.free-ship-and-item img {
+    width: 41px;
+    height: 42px;
+    object-fit: contain;
+}
+
+.free-ship-and-item div {
+    display: block;
+    font-size: 14px;
+    color: #000;
+    font-weight: 600;
+    margin-left: 10px;
+}
+
+.free-ship-and-item div span {
+    color: #f96e17;
 }
 
 /* CSS Product and category */
